// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders empty table 1`] = `
<div class="gov-table-wrapper">
  <div class="gov-spin-nested-loading">
    <div class="gov-spin-container">
      <div class="gov-table gov-table-scroll-position-left gov-table-default gov-table-empty">
        <div class="gov-table-content">
          <!---->
          <div class="gov-table-body">
            <table class="">
              <colgroup>
                <col>
                <col>
                <col>
                <col>
                <col>
                <col>
                <col>
                <col>
              </colgroup>
              <thead class="gov-table-thead">
                <tr>
                  <th key="1" class="">
                    <div>Column 1</div>
                  </th>
                  <th key="2" class="">
                    <div>Column 2</div>
                  </th>
                  <th key="3" class="">
                    <div>Column 3</div>
                  </th>
                  <th key="4" class="">
                    <div>Column 4</div>
                  </th>
                  <th key="5" class="">
                    <div>Column 5</div>
                  </th>
                  <th key="6" class="">
                    <div>Column 6</div>
                  </th>
                  <th key="7" class="">
                    <div>Column 7</div>
                  </th>
                  <th key="8" class="">
                    <div>Column 8</div>
                  </th>
                </tr>
              </thead>
              <tbody class="gov-table-tbody"></tbody>
            </table>
          </div>
          <div class="gov-table-placeholder">暂无数据</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table with custom emptyText 1`] = `
<div class="gov-table-wrapper">
  <div class="gov-spin-nested-loading">
    <div class="gov-spin-container">
      <div class="gov-table gov-table-scroll-position-left gov-table-default gov-table-empty">
        <div class="gov-table-content">
          <!---->
          <div class="gov-table-body">
            <table class="">
              <colgroup>
                <col>
                <col>
                <col>
                <col>
                <col>
                <col>
                <col>
                <col>
              </colgroup>
              <thead class="gov-table-thead">
                <tr>
                  <th key="1" class="">
                    <div>Column 1</div>
                  </th>
                  <th key="2" class="">
                    <div>Column 2</div>
                  </th>
                  <th key="3" class="">
                    <div>Column 3</div>
                  </th>
                  <th key="4" class="">
                    <div>Column 4</div>
                  </th>
                  <th key="5" class="">
                    <div>Column 5</div>
                  </th>
                  <th key="6" class="">
                    <div>Column 6</div>
                  </th>
                  <th key="7" class="">
                    <div>Column 7</div>
                  </th>
                  <th key="8" class="">
                    <div>Column 8</div>
                  </th>
                </tr>
              </thead>
              <tbody class="gov-table-tbody"></tbody>
            </table>
          </div>
          <div class="gov-table-placeholder">custom empty text </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table with fixed columns 1`] = `
<div class="gov-table-wrapper">
  <div class="gov-spin-nested-loading">
    <div class="gov-spin-container">
      <div class="gov-table gov-table-default gov-table-empty gov-table-scroll-position-left gov-table-scroll-position-right">
        <div class="gov-table-content">
          <div class="gov-table-scroll">
            <!---->
            <div class="gov-table-body">
              <table class="">
                <colgroup>
                  <col style="width: 100px; min-width: 100px;">
                  <col style="width: 100px; min-width: 100px;">
                  <col>
                  <col>
                  <col>
                  <col>
                  <col>
                  <col>
                  <col>
                  <col>
                  <col style="width: 100px; min-width: 100px;">
                </colgroup>
                <thead class="gov-table-thead">
                  <tr>
                    <th key="name" class="gov-table-fixed-columns-in-body">
                      <div>Full Name</div>
                    </th>
                    <th key="age" class="gov-table-fixed-columns-in-body">
                      <div>Age</div>
                    </th>
                    <th key="1" class="">
                      <div>Column 1</div>
                    </th>
                    <th key="2" class="">
                      <div>Column 2</div>
                    </th>
                    <th key="3" class="">
                      <div>Column 3</div>
                    </th>
                    <th key="4" class="">
                      <div>Column 4</div>
                    </th>
                    <th key="5" class="">
                      <div>Column 5</div>
                    </th>
                    <th key="6" class="">
                      <div>Column 6</div>
                    </th>
                    <th key="7" class="">
                      <div>Column 7</div>
                    </th>
                    <th key="8" class="">
                      <div>Column 8</div>
                    </th>
                    <th key="address" class="gov-table-fixed-columns-in-body">
                      <div>Action</div>
                    </th>
                  </tr>
                </thead>
                <tbody class="gov-table-tbody"></tbody>
              </table>
            </div>
            <div class="gov-table-placeholder">暂无数据</div>
          </div>
          <div class="gov-table-fixed-left">
            <!---->
            <div class="gov-table-body-outer">
              <div class="gov-table-body-inner">
                <table class="gov-table-fixed">
                  <colgroup>
                    <col style="width: 100px; min-width: 100px;">
                    <col style="width: 100px; min-width: 100px;">
                  </colgroup>
                  <thead class="gov-table-thead">
                    <tr>
                      <th key="name" class="">
                        <div>Full Name</div>
                      </th>
                      <th key="age" class="">
                        <div>Age</div>
                      </th>
                    </tr>
                  </thead>
                  <tbody class="gov-table-tbody"></tbody>
                </table>
              </div>
            </div>
          </div>
          <div class="gov-table-fixed-right">
            <!---->
            <div class="gov-table-body-outer">
              <div class="gov-table-body-inner">
                <table class="gov-table-fixed">
                  <colgroup>
                    <col style="width: 100px; min-width: 100px;">
                  </colgroup>
                  <thead class="gov-table-thead">
                    <tr>
                      <th key="address" class="">
                        <div>Action</div>
                      </th>
                    </tr>
                  </thead>
                  <tbody class="gov-table-tbody"></tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table without emptyText when loading 1`] = `
<div class="gov-table-wrapper">
  <div class="gov-spin-nested-loading gov-table-without-pagination gov-table-spin-holder">
    <div>
      <div class="gov-spin gov-spin-spinning"><span class="gov-spin-dot gov-spin-dot-spin"><i></i><i></i><i></i><i></i></span></div>
    </div>
    <div class="gov-spin-container gov-spin-blur">
      <div class="gov-table gov-table-scroll-position-left gov-table-default gov-table-empty">
        <div class="gov-table-content">
          <!---->
          <div class="gov-table-body">
            <table class="">
              <colgroup>
                <col>
                <col>
                <col>
                <col>
                <col>
                <col>
                <col>
                <col>
              </colgroup>
              <thead class="gov-table-thead">
                <tr>
                  <th key="1" class="">
                    <div>Column 1</div>
                  </th>
                  <th key="2" class="">
                    <div>Column 2</div>
                  </th>
                  <th key="3" class="">
                    <div>Column 3</div>
                  </th>
                  <th key="4" class="">
                    <div>Column 4</div>
                  </th>
                  <th key="5" class="">
                    <div>Column 5</div>
                  </th>
                  <th key="6" class="">
                    <div>Column 6</div>
                  </th>
                  <th key="7" class="">
                    <div>Column 7</div>
                  </th>
                  <th key="8" class="">
                    <div>Column 8</div>
                  </th>
                </tr>
              </thead>
              <tbody class="gov-table-tbody"></tbody>
            </table>
          </div>
          <div class="gov-table-placeholder"></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
